--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "g": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
